Revert "Merge branch 'timezone-handling-trigger-date' of https://github.com/hemantmm/kestra into timezone-handling-trigger-date"
This reverts commit ac3b6bb6393d205323c346671ea857c3738dfe64, reversing
changes made to 8c3c9a712e0a53c22dde24e416cf965dfdf44416.